--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,6 +39,7 @@ play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
 
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 
 # Json error handler
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
@@ -126,7 +127,7 @@ metrics {
     rateUnit = SECONDS
     durationUnit = SECONDS
     showSamples = true
-    jvm = true
+    jvm = false
     enabled = true
 }
 
