CDSID-482 | added bearer auth action

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -170,6 +170,12 @@ microservice {
             port=8500
         }
 
+        customs-declarations {
+            host=localhost
+            port=9820
+            protocol=http
+            bearer-token=e1e49d86-0a27-4c32-8dbb-a5da05a9d6f3
+        }
     }
 }
 
