CDSID-482 | added notification service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -174,7 +174,7 @@ microservice {
             host=localhost
             port=9820
             protocol=http
-            bearer-token=e1e49d86-0a27-4c32-8dbb-a5da05a9d6f3
+            bearer-token="Bearer e1e49d86-0a27-4c32-8dbb-a5da05a9d6f3"
         }
     }
 }
