--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2019 HM Revenue & Customs
+# Copyright 2020 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -48,7 +48,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 # ~~~~
 # Additional play modules can be added here
 
-play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
 
 # Session Timeout
 # ~~~~
@@ -172,5 +172,3 @@ microservice {
 
     }
 }
-
-
