[CEDS-2786] Add db migration feature
Adding a db migration feature that runs on application
startup as a precursor to making certain fields of the
Notification entity optional.

No migrations are included in this commit (will be
added later)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,6 +36,9 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModu
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
 
+# A utility that runs registerd routines on application startup
+play.modules.enabled += "uk.gov.hmrc.exports.routines.RoutineRunnerModule"
+
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
@@ -133,4 +136,14 @@ microservice {
 
 notifications {
   ttl-seconds = 3600
+}
+
+contexts {
+    routines-dispatcher {
+        fork-join-executor {
+            parallelism-min = 2
+            parallalism-factor = 2.0
+            parallelism-max = 20
+        }
+    }
 }
