CEDS-2897 update deprecated config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -63,10 +63,9 @@ application.session.httpOnly=false
 application.session.secure=false
 
 # The application languages
-application.langs="en"
 
 # Router
-application.router=prod.Routes
+play.http.router=prod.Routes
 
 json.encryption {
     key="eTRDaFlxN01vM3BiUHhtNw=="
