--- a/conf/application.conf
+++ b/conf/application.conf
@@ -130,6 +130,14 @@ microservice {
             port=8500
         }
 
+        customs-declarations-information {
+            host = localhost
+            port = 9834
+            fetch-mrn-status = "/mrn/ID/status"
+            api-version = "1.0"
+            bearer-token = "Bearer customs-declare-exports"
+            client-id = "customs-declare-exports"
+        }
     }
 }
 
