CEDS-2906 Implement CustomsDeclarationsInformationConnector
Implementation is very similar to the one in customs-declare-exports
service, but it handles 404 responses separately.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -115,6 +115,13 @@ microservice {
             port=8500
         }
 
+        customs-declarations-information {
+            host = localhost
+            port = 9834
+            declaration-status-mrn = "/mrn/ID/status"
+            api-version = "1.0"
+            client-id = "cds-file-upload"
+        }
     }
 }
 
