--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,6 +17,7 @@ include "backend.conf"
 # This is the main configuration file for the application.
 
 appName=cds-file-upload
+developerHubClientId="cds-file-upload"
 
 # An ApplicationLoader that uses Guice to bootstrap the application.
 play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
@@ -120,7 +121,6 @@ microservice {
             port = 9834
             declaration-status-mrn = "/mrn/ID/status"
             api-version = "1.0"
-            client-id = "cds-file-upload"
         }
     }
 }
