BAU Fix package names for routines and migrations

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,7 +38,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 play.http.filters = "uk.gov.hmrc.play.bootstrap.backend.filters.BackendFilters"
 
 # A utility that runs registerd routines on application startup
-play.modules.enabled += "uk.gov.hmrc.exports.routines.RoutineRunnerModule"
+play.modules.enabled += "routines.RoutineRunnerModule"
 
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
