CEDS-3033 Retrieve the verified email for a given EORI from the downstream service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -112,8 +112,8 @@ microservice {
 
     services {
         auth {
-            host=localhost
-            port=8500
+            host = localhost
+            port = 8500
         }
 
         customs-declarations-information {
@@ -122,11 +122,17 @@ microservice {
             declaration-status-mrn = "/mrn/ID/status"
             api-version = "1.0"
         }
+
+        customs-data-store {
+            host = localhost
+            port = 6790
+            context = "customs-data-store"
+        }
     }
 }
 
 notifications {
-  ttl-seconds = 3600
+    ttl-seconds = 3600
 }
 
 contexts {
