--- a/conf/application.conf
+++ b/conf/application.conf
@@ -126,7 +126,7 @@ microservice {
         customs-data-store {
             host = localhost
             port = 6790
-            context = "customs-data-store"
+            verified-email-path = "/customs-data-store/eori/EORI/verified-email"
         }
     }
 }
