--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,6 +55,7 @@ play.http.router=prod.Routes
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
     enabled = true
+    jvm = false
 }
 
 # Microservice specific config
