CEDS-6062 Update bootstrap play to 9.5.0

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,7 +20,7 @@ appName=cds-file-upload
 developerHubClientId="cds-file-upload"
 
 # Default http client
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 
 # Json error handler
